--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Skjul hvis der kun er ét synligt faneblad">
 <!ENTITY Ctr_closei_def		"Standard ikoner">
 <!ENTITY Ctr_closeonleft	"Alternativ placering på faneblad">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Luk vindue med det sidste synlige faneblad (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Nogle varianter af faneblade er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Tilføjelseslister: kompakt visning">
 <!ENTITY Ctr_am_compact2	"Kompakt udseende +">
 <!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Tilføjelseslister: vis tilføjelsesversion">
 <!ENTITY Ctr_xpinstallui	"Gamle tilføjelser-installationsvindue (about:config-indstilling)">
 <!ENTITY Ctr_bmbutton		"Bogmærker-menuknap">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Vis ikke grå farve når der peges på">
 <!ENTITY Ctr_ib_graycolor	"Grå farve for ukendt identitet og chrome-sider">
 <!ENTITY Ctr_verifiedcolors	"Knapfarver for bekræftede websteder, sikre og ikke-sikre forbindelser">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Favicon: nuværende webstedsikon">
 <!ENTITY Ctr_padlock		"Hængelås ikon for sikre forbindelser">
 <!ENTITY Ctr_padlock_hid	"skjul">
