--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Versteckt bei nur einem sichtbaren Tab">
 <!ENTITY Ctr_closei_def		"Standard-Symbole">
 <!ENTITY Ctr_closeonleft	"Am Anfang des Tabs">
+<!ENTITY Ctr_closetabbig	"Größeres Symbol (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Schließt Fenster mit nur einem sichtbaren Tab (about:config Einstellung)">
 
 <!ENTITY Ctr_hctpinfotab	"Einige Tabvarianten sind nicht kompatibel zu 'Hide Caption Titlebar Plus'.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Add-on 'Übersicht': Kompakte Darstellung">
 <!ENTITY Ctr_am_compact2	"Kompakte Darstellung +">
 <!ENTITY Ctr_am_highlight	"Add-on 'Übersicht': Eintrag beim 'Hovern' hervorheben">
+<!ENTITY Ctr_am_buticons	"Add-on 'Übersicht': Schaltflächentexte durch Symbole ersetzen">
+<!ENTITY Ctr_am_hovshowb	"Add-on 'Übersicht': Schaltflächen nur beim 'Hovern' anzeigen">
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on Installationsfenster (about:config Einstellung)">
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
 <!ENTITY Ctr_ib_graycolor	"Graue Farbe für 'Chrome' Seiten und Seiten mit unbekannter Identität">
 <!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
+<!ENTITY Ctr_ibinfoico		"'i'-Symbol durch Globus-Symbol ersetzen">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
 <!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
 <!ENTITY Ctr_padlock_hid	"versteckt">
