--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtark schowaś">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Někotare rejtarkowe warianty njejsu kompatibelne z rozšyrjenim 'Hide Caption Titlebar Plus'.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Lisćiny dodankow: kompaktny naglěd">
 <!ENTITY Ctr_am_compact2	"Kompaktny naglěd +">
 <!ENTITY Ctr_am_highlight	"Lisćiny dodankow: zapisk pśez hover wuzwignuś">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Lisćiny dodankow: wersiju dodanka pokazaś">
 <!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Šeru barwu pód kursorom myški njepokazaś">
 <!ENTITY Ctr_ib_graycolor	"Šera barwa za njeznate identitowe boki a boki chrome">
 <!ENTITY Ctr_verifiedcolors	"Tłocaškowe barwy za pśeglědane websedła, wěste a njewěste zwiski">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Pytkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
