--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Peida, kui näha on ainult üks kaart">
 <!ENTITY Ctr_closei_def		"Vaikimisi ikoonid">
 <!ENTITY Ctr_closeonleft	"Alternatiivne asukoht kaardil">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Viimase nähtava kaardi sulgemisel sulge kogu aken (about:config eelistus)">
 
 <!ENTITY Ctr_hctpinfotab	"Mõned kaardi variatsioonid ei ühildu lisaga 'Hide Caption Titlebar Plus'.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Laienduste loendid: kompaktne vaade">
 <!ENTITY Ctr_am_compact2	"Kompaktne vaade +">
 <!ENTITY Ctr_am_highlight	"Laienduste loendid: hiirega peale minnes tõsta kirjed esile">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Laienduste loendid: näita lisade versiooni">
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
 <!ENTITY Ctr_ib_graycolor	"Hall värvus tundmatu identiteedi ja chrome-lehtede jaoks">
 <!ENTITY Ctr_verifiedcolors	"Verifitseeritud veebisaitide ning turvaliste ja ebaturvaliste ühenduste nupuvärvid">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Lehe ikoon: aktiivse veebisaidi ikoon">
 <!ENTITY Ctr_padlock		"Tabaluku ikoon turvaliste ühenduste jaoks">
 <!ENTITY Ctr_padlock_hid	"peidetud">
