--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Masquer si un seul onglet est visible">
 <!ENTITY Ctr_closei_def		"Icônes par défaut">
 <!ENTITY Ctr_closeonleft	"Position alternative sur l'onglet">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Fermer la fenêtre lorsque je ferme le dernier onglet (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Certaines variations d'onglets ne sont pas compatibles avec le module « Hide Caption Titlebar Plus ».">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Listes de modules : vue compacte">
 <!ENTITY Ctr_am_compact2	"Vue compacte +">
 <!ENTITY Ctr_am_highlight	"Listes de modules : mettre l'entrée en surbrillance au survol">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Listes de modules : afficher la version du module">
 <!ENTITY Ctr_xpinstallui	"Ancienne fenêtre d'installation de modules (préférence about:config)">
 <!ENTITY Ctr_bmbutton		"Bouton Marque-pages">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Ne pas afficher de couleur grise quand il est survolé">
 <!ENTITY Ctr_ib_graycolor	"Couleur grise pour les pages dont l'identification est inconnue et celles du chrome">
 <!ENTITY Ctr_verifiedcolors	"Couleurs de boutons pour les sites certifiés sécurisés, les connexions sécurisées et non sécurisées">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse">
 <!ENTITY Ctr_padlock		"Cadenas">
 <!ENTITY Ctr_padlock_hid	"masqué">
