--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Za jedyn widźomny rajtark schować">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rajtarku">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Wokno z poslednim widźomnym rajtarkom začinić (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Někotre rajtarkowe warianty z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njejsu.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Lisćiny přidatkow: kompatkny napohlad">
 <!ENTITY Ctr_am_compact2	"Kompaktny napohlad +">
 <!ENTITY Ctr_am_highlight	"Lisćiny přidatkow: zapisk přez hover wuzběhnyć">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
 <!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Pod kursorom myški šěru barbu njepokazać">
 <!ENTITY Ctr_ib_graycolor	"Šěra barba za njeznate identitowe strony a strony 'chrome'">
 <!ENTITY Ctr_verifiedcolors	"Tłóčatkowe barby za přepruwowane websydła, wěste a njewěste zwiski">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Zamkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
