--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Скрыть для одной вкладки">
 <!ENTITY Ctr_closei_def		"Стандартный значок">
 <!ENTITY Ctr_closeonleft	"Альтернативная позиция на вкладке">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Закрыть окно при закрытии последней вкладки (настройка about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Некоторые разновидности вкладок несовместимы с расширением 'Hide Caption Titlebar Plus'.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Список дополнений: компактный вид">
 <!ENTITY Ctr_am_compact2	"Компактный вид +">
 <!ENTITY Ctr_am_highlight	"Список дополнений: выделять элемент при наведении">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Список дополнений: показывать версии дополнений">
 <!ENTITY Ctr_xpinstallui	"Старое окно установки дополнений (настройка about:config)">
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Не показывать серый цвет при наведении">
 <!ENTITY Ctr_ib_graycolor	"Серый цвет для неопознанных и «Сhrome» страниц">
 <!ENTITY Ctr_verifiedcolors	"Цвет кнопки для проверенных веб-сайтов, защищённых и не защищённых соединений">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Значок в адресной строке">
 <!ENTITY Ctr_padlock		"Замок">
 <!ENTITY Ctr_padlock_hid	"Скрыть замок">
