--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"只有一個分頁時，則隱藏關閉按鈕">
 <!ENTITY Ctr_closei_def		"預設圖示">
 <!ENTITY Ctr_closeonleft	"關閉按鈕置於分頁左側">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"關閉最後一個分頁時，也關閉視窗 (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"一些分頁設定不相容於 Hide Caption Titlebar Plus 擴充套件。">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"附加元件清單: 緊湊風格">
 <!ENTITY Ctr_am_compact2	"緊湊風格 +">
 <!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"附加元件清單: 顯示附加元件版本號">
 <!ENTITY Ctr_xpinstallui	"使用傳統彈出式的附加元件安裝視窗 (about:config)">
 <!ENTITY Ctr_bmbutton		"書籤選單按鈕">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"懸停時，不著上灰色底">
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"網址列顯示網站圖示">
 <!ENTITY Ctr_padlock		"鎖頭">
 <!ENTITY Ctr_padlock_hid	"隱藏">
