--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Skrýt pro jeden viditelný panel">
 <!ENTITY Ctr_closei_def		"Defaultní icony">
 <!ENTITY Ctr_closeonleft	"Alternativní pozice na panelu">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Zavřít okno s posledním viditelným panelem (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Některá nastavení nejsou kompatibilní s rozšířením 'Hide Caption Titlebar Plus'.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Správce doplňků: kompaktní vzhled">
 <!ENTITY Ctr_am_compact2	"Kompaktní vzhled +">
 <!ENTITY Ctr_am_highlight	"Správce rozšíření: zvýraznit položku po najetí myší">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
 <!ENTITY Ctr_bmbutton		"Tlačítko menu záložek">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Nezobrazovat šedou barvu při přejetí myší">
 <!ENTITY Ctr_ib_graycolor	"Šedá barva pro neznámou identitu a stránky chrome">
 <!ENTITY Ctr_verifiedcolors	"Barvy tlačítka pro ověřené stránky, zabezpečené a nezabezpečené připojení">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Favicona">
 <!ENTITY Ctr_padlock		"Zámek">
 <!ENTITY Ctr_padlock_hid	"skrytý">
