--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Görünen sekme için sakla">
 <!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Sekme üstünde alternatif pozisyon">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Son görülebilir sekmeyle sencereyi kapat (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Bazı sekme varyasyonları 'Hide Caption Titlebar Plus' eklentisiyle uyumlu değildir.">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"Add-on lists: compact view">
 <!ENTITY Ctr_am_compact2	"Compact view +">
 <!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"Add-on lists: show add-on version">
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutton		"Yer imleri menü düğmesi">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"Favicon: Mevcut web siteleri simgesidir">
 <!ENTITY Ctr_padlock		"Güvenli bağlantılar için asma kilit simgesi">
 <!ENTITY Ctr_padlock_hid	"gizli">
