--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -71,6 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"仅一个可见标签页时隐藏">
 <!ENTITY Ctr_closei_def		"默认图标">
 <!ENTITY Ctr_closeonleft	"标签页上的备选位置">
+<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"关闭最后一个可见标签页后关闭窗口 (about:config 选项)">
 
 <!ENTITY Ctr_hctpinfotab	"部分标签页变化与 “Hide Caption Titlebar Plus” 扩展不兼容。">
@@ -170,6 +171,8 @@
 <!ENTITY Ctr_am_compact		"附加组件列表: 紧凑视图">
 <!ENTITY Ctr_am_compact2	"紧凑视图 +">
 <!ENTITY Ctr_am_highlight	"附加组件列表: 鼠标悬停时高亮项目">
+<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
+<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
 <!ENTITY Ctr_bmbutton		"书签菜单按钮">
@@ -238,6 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"鼠标悬停时不显示灰色">
 <!ENTITY Ctr_ib_graycolor	"未知网站标识与Chrome页面显示灰色">
 <!ENTITY Ctr_verifiedcolors	"已验证站点，安全站点和不安全站点显示不同颜色按钮">
+<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
 <!ENTITY Ctr_faviconurl		"网站图标：当前网站图标">
 <!ENTITY Ctr_padlock		"加密连接锁图标">
 <!ENTITY Ctr_padlock_hid	"隐藏">
