--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -171,8 +171,8 @@
 <!ENTITY Ctr_am_compact		"Seznami dodatkov: strnjen pogled">
 <!ENTITY Ctr_am_compact2	"Strnjen pogled +">
 <!ENTITY Ctr_am_highlight	"Seznami dodatkov: poudari vnos ob prehodu z miško">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_buticons	"Seznami dodatkov: nadomesti oznake gumbov z ikonami">
+<!ENTITY Ctr_am_hovshowb	"Seznami dodatkov: gumbe prikaži samo ob 'prehodu z miško'">
 <!ENTITY Ctr_addonversion	"Stran dodatkov: prikaži različico dodatka">
 <!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov (možnost about:config)">
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
@@ -241,7 +241,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Ob prehodu ne prikaži sive barve">
 <!ENTITY Ctr_ib_graycolor	"Siva barva za neznano identiteto in strani chrome">
 <!ENTITY Ctr_verifiedcolors	"Barve gumbov za preverjene strani, varne in nezanesljive povezave">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico		"Nadomesti ikono 'i'z ikono sveta">
 <!ENTITY Ctr_faviconurl		"Zaznamka: ikona trenutne spletne strani">
 <!ENTITY Ctr_padlock		"Ikona ključavnice za varne povezave">
 <!ENTITY Ctr_padlock_hid	"skrita">
